valid_tests/type_checking/test3.go
// Test 3: Array type checking
func main() {
    numbers := []int{1, 2, 3}
    first := numbers[0]
    numbers[1] = 42
    
    strings := []string{"hello", "world"}
    greeting := strings[0]
}
